src/libqlocale.h

typedef struct QCalendar QCalendar;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QLocale QLocale;
typedef struct QTime QTime;
QLocale* QLocale_new();
QLocale* QLocale_new2(libqt_string name);
QLocale* QLocale_new3(uint16_t language, uint16_t territory);
QLocale* QLocale_new4(uint16_t language);
QLocale* QLocale_new5(QLocale* other);
QLocale* QLocale_new6(uint16_t language, uint16_t script);
QLocale* QLocale_new7(uint16_t language, uint16_t script, uint16_t territory);
void QLocale_OperatorAssign(QLocale* self, QLocale* other);
void QLocale_Swap(QLocale* self, QLocale* other);
uint16_t QLocale_Language(const QLocale* self);
uint16_t QLocale_Script(const QLocale* self);
uint16_t QLocale_Territory(const QLocale* self);
uint16_t QLocale_Country(const QLocale* self);
libqt_string QLocale_Name(const QLocale* self);
libqt_string QLocale_Bcp47Name(const QLocale* self);
libqt_string QLocale_NativeLanguageName(const QLocale* self);
libqt_string QLocale_NativeTerritoryName(const QLocale* self);
libqt_string QLocale_NativeCountryName(const QLocale* self);
int16_t QLocale_ToShort(const QLocale* self, libqt_string s);
uint16_t QLocale_ToUShort(const QLocale* self, libqt_string s);
int QLocale_ToInt(const QLocale* self, libqt_string s);
unsigned int QLocale_ToUInt(const QLocale* self, libqt_string s);
long QLocale_ToLong(const QLocale* self, libqt_string s);
unsigned long QLocale_ToULong(const QLocale* self, libqt_string s);
long long QLocale_ToLongLong(const QLocale* self, libqt_string s);
unsigned long long QLocale_ToULongLong(const QLocale* self, libqt_string s);
float QLocale_ToFloat(const QLocale* self, libqt_string s);
double QLocale_ToDouble(const QLocale* self, libqt_string s);
libqt_string QLocale_ToString(const QLocale* self, long long i);
libqt_string QLocale_ToStringWithQulonglong(const QLocale* self, unsigned long long i);
libqt_string QLocale_ToStringWithLong(const QLocale* self, long i);
libqt_string QLocale_ToStringWithUlong(const QLocale* self, unsigned long i);
libqt_string QLocale_ToStringWithShort(const QLocale* self, int16_t i);
libqt_string QLocale_ToStringWithUshort(const QLocale* self, uint16_t i);
libqt_string QLocale_ToStringWithInt(const QLocale* self, int i);
libqt_string QLocale_ToStringWithUint(const QLocale* self, unsigned int i);
libqt_string QLocale_ToStringWithDouble(const QLocale* self, double f);
libqt_string QLocale_ToStringWithFloat(const QLocale* self, float f);
libqt_string QLocale_ToString2(const QLocale* self, QDate* date, libqt_string format);
libqt_string QLocale_ToString3(const QLocale* self, QTime* time, libqt_string format);
libqt_string QLocale_ToString4(const QLocale* self, QDateTime* dateTime, libqt_string format);
libqt_string QLocale_ToStringWithDate(const QLocale* self, QDate* date);
libqt_string QLocale_ToStringWithTime(const QLocale* self, QTime* time);
libqt_string QLocale_ToStringWithDateTime(const QLocale* self, QDateTime* dateTime);
libqt_string QLocale_ToString9(const QLocale* self, QDate* date, int format, QCalendar* cal);
libqt_string QLocale_ToString10(const QLocale* self, QDateTime* dateTime, int format, QCalendar* cal);
libqt_string QLocale_DateFormat(const QLocale* self);
libqt_string QLocale_TimeFormat(const QLocale* self);
libqt_string QLocale_DateTimeFormat(const QLocale* self);
QDate* QLocale_ToDate(const QLocale* self, libqt_string stringVal);
QTime* QLocale_ToTime(const QLocale* self, libqt_string stringVal);
QDateTime* QLocale_ToDateTime(const QLocale* self, libqt_string stringVal);
QDate* QLocale_ToDate2(const QLocale* self, libqt_string stringVal, libqt_string format);
QTime* QLocale_ToTime2(const QLocale* self, libqt_string stringVal, libqt_string format);
QDateTime* QLocale_ToDateTime2(const QLocale* self, libqt_string stringVal, libqt_string format);
QDate* QLocale_ToDate3(const QLocale* self, libqt_string stringVal, int format, QCalendar* cal);
QDateTime* QLocale_ToDateTime3(const QLocale* self, libqt_string stringVal, int format, QCalendar* cal);
QDate* QLocale_ToDate4(const QLocale* self, libqt_string stringVal, libqt_string format, QCalendar* cal);
QDateTime* QLocale_ToDateTime4(const QLocale* self, libqt_string stringVal, libqt_string format, QCalendar* cal);
libqt_string QLocale_DecimalPoint(const QLocale* self);
libqt_string QLocale_GroupSeparator(const QLocale* self);
libqt_string QLocale_Percent(const QLocale* self);
libqt_string QLocale_ZeroDigit(const QLocale* self);
libqt_string QLocale_NegativeSign(const QLocale* self);
libqt_string QLocale_PositiveSign(const QLocale* self);
libqt_string QLocale_Exponential(const QLocale* self);
libqt_string QLocale_MonthName(const QLocale* self, int param1);
libqt_string QLocale_StandaloneMonthName(const QLocale* self, int param1);
libqt_string QLocale_DayName(const QLocale* self, int param1);
libqt_string QLocale_StandaloneDayName(const QLocale* self, int param1);
int QLocale_FirstDayOfWeek(const QLocale* self);
libqt_list /* of int */ QLocale_Weekdays(const QLocale* self);
libqt_string QLocale_AmText(const QLocale* self);
libqt_string QLocale_PmText(const QLocale* self);
int QLocale_MeasurementSystem(const QLocale* self);
QLocale* QLocale_Collation(const QLocale* self);
int QLocale_TextDirection(const QLocale* self);
libqt_string QLocale_ToUpper(const QLocale* self, libqt_string str);
libqt_string QLocale_ToLower(const QLocale* self, libqt_string str);
libqt_string QLocale_CurrencySymbol(const QLocale* self);
libqt_string QLocale_ToCurrencyString(const QLocale* self, long long param1);
libqt_string QLocale_ToCurrencyStringWithUnsignedlonglong(const QLocale* self, unsigned long long param1);
libqt_string QLocale_ToCurrencyStringWithShort(const QLocale* self, int16_t i);
libqt_string QLocale_ToCurrencyStringWithUshort(const QLocale* self, uint16_t i);
libqt_string QLocale_ToCurrencyStringWithInt(const QLocale* self, int i);
libqt_string QLocale_ToCurrencyStringWithUint(const QLocale* self, unsigned int i);
libqt_string QLocale_ToCurrencyStringWithDouble(const QLocale* self, double param1);
libqt_string QLocale_ToCurrencyStringWithFloat(const QLocale* self, float i);
libqt_string QLocale_FormattedDataSize(const QLocale* self, long long bytes);
libqt_list /* of libqt_string */ QLocale_UiLanguages(const QLocale* self);
libqt_string QLocale_LanguageToCode(uint16_t language);
libqt_string QLocale_TerritoryToCode(uint16_t territory);
libqt_string QLocale_CountryToCode(uint16_t country);
libqt_string QLocale_ScriptToCode(uint16_t script);
libqt_string QLocale_LanguageToString(uint16_t language);
libqt_string QLocale_TerritoryToString(uint16_t territory);
libqt_string QLocale_CountryToString(uint16_t country);
libqt_string QLocale_ScriptToString(uint16_t script);
void QLocale_SetDefault(QLocale* locale);
QLocale* QLocale_C();
QLocale* QLocale_System();
libqt_list /* of QLocale* */ QLocale_MatchingLocales(uint16_t language, uint16_t script, uint16_t territory);