src/qt/libqlocale.bf

public struct QLocale
{
	[LinkName("QLocale_new")]
	public static extern QLocale* QLocale_new();
	[LinkName("QLocale_new2")]
	public static extern QLocale* QLocale_new2(libqt_string name);
	[LinkName("QLocale_new3")]
	public static extern QLocale* QLocale_new3(int64 language, int64 territory);
	[LinkName("QLocale_new4")]
	public static extern QLocale* QLocale_new4(int64 language);
	[LinkName("QLocale_new5")]
	public static extern QLocale* QLocale_new5(QLocale* other);
	[LinkName("QLocale_new6")]
	public static extern QLocale* QLocale_new6(int64 language, int64 script);
	[LinkName("QLocale_new7")]
	public static extern QLocale* QLocale_new7(int64 language, int64 script, int64 territory);
	[LinkName("QLocale_OperatorAssign")]
	public static extern void QLocale_OperatorAssign(Self* c_this, QLocale* other);
	[LinkName("QLocale_Swap")]
	public static extern void QLocale_Swap(Self* c_this, QLocale* other);
	[LinkName("QLocale_Language")]
	public static extern int64 QLocale_Language(Self* c_this);
	[LinkName("QLocale_Script")]
	public static extern int64 QLocale_Script(Self* c_this);
	[LinkName("QLocale_Territory")]
	public static extern int64 QLocale_Territory(Self* c_this);
	[LinkName("QLocale_Country")]
	public static extern int64 QLocale_Country(Self* c_this);
	[LinkName("QLocale_Name")]
	public static extern libqt_string QLocale_Name(Self* c_this);
	[LinkName("QLocale_Bcp47Name")]
	public static extern libqt_string QLocale_Bcp47Name(Self* c_this);
	[LinkName("QLocale_NativeLanguageName")]
	public static extern libqt_string QLocale_NativeLanguageName(Self* c_this);
	[LinkName("QLocale_NativeTerritoryName")]
	public static extern libqt_string QLocale_NativeTerritoryName(Self* c_this);
	[LinkName("QLocale_NativeCountryName")]
	public static extern libqt_string QLocale_NativeCountryName(Self* c_this);
	[LinkName("QLocale_ToShort")]
	public static extern int16 QLocale_ToShort(Self* c_this, libqt_string s);
	[LinkName("QLocale_ToUShort")]
	public static extern uint16 QLocale_ToUShort(Self* c_this, libqt_string s);
	[LinkName("QLocale_ToInt")]
	public static extern int32 QLocale_ToInt(Self* c_this, libqt_string s);
	[LinkName("QLocale_ToUInt")]
	public static extern uint32 QLocale_ToUInt(Self* c_this, libqt_string s);
	[LinkName("QLocale_ToLong")]
	public static extern c_long QLocale_ToLong(Self* c_this, libqt_string s);
	[LinkName("QLocale_ToULong")]
	public static extern c_ulong QLocale_ToULong(Self* c_this, libqt_string s);
	[LinkName("QLocale_ToLongLong")]
	public static extern int64 QLocale_ToLongLong(Self* c_this, libqt_string s);
	[LinkName("QLocale_ToULongLong")]
	public static extern uint64 QLocale_ToULongLong(Self* c_this, libqt_string s);
	[LinkName("QLocale_ToFloat")]
	public static extern float QLocale_ToFloat(Self* c_this, libqt_string s);
	[LinkName("QLocale_ToDouble")]
	public static extern double QLocale_ToDouble(Self* c_this, libqt_string s);
	[LinkName("QLocale_ToString")]
	public static extern libqt_string QLocale_ToString(Self* c_this, int64 i);
	[LinkName("QLocale_ToStringWithQulonglong")]
	public static extern libqt_string QLocale_ToStringWithQulonglong(Self* c_this, uint64 i);
	[LinkName("QLocale_ToStringWithLong")]
	public static extern libqt_string QLocale_ToStringWithLong(Self* c_this, c_long i);
	[LinkName("QLocale_ToStringWithUlong")]
	public static extern libqt_string QLocale_ToStringWithUlong(Self* c_this, c_ulong i);
	[LinkName("QLocale_ToStringWithShort")]
	public static extern libqt_string QLocale_ToStringWithShort(Self* c_this, int16 i);
	[LinkName("QLocale_ToStringWithUshort")]
	public static extern libqt_string QLocale_ToStringWithUshort(Self* c_this, uint16 i);
	[LinkName("QLocale_ToStringWithInt")]
	public static extern libqt_string QLocale_ToStringWithInt(Self* c_this, int32 i);
	[LinkName("QLocale_ToStringWithUint")]
	public static extern libqt_string QLocale_ToStringWithUint(Self* c_this, uint32 i);
	[LinkName("QLocale_ToStringWithDouble")]
	public static extern libqt_string QLocale_ToStringWithDouble(Self* c_this, double f);
	[LinkName("QLocale_ToStringWithFloat")]
	public static extern libqt_string QLocale_ToStringWithFloat(Self* c_this, float f);
	[LinkName("QLocale_ToString2")]
	public static extern libqt_string QLocale_ToString2(Self* c_this, QDate date, libqt_string format);
	[LinkName("QLocale_ToString3")]
	public static extern libqt_string QLocale_ToString3(Self* c_this, QTime time, libqt_string format);
	[LinkName("QLocale_ToString4")]
	public static extern libqt_string QLocale_ToString4(Self* c_this, QDateTime* dateTime, libqt_string format);
	[LinkName("QLocale_ToStringWithDate")]
	public static extern libqt_string QLocale_ToStringWithDate(Self* c_this, QDate date);
	[LinkName("QLocale_ToStringWithTime")]
	public static extern libqt_string QLocale_ToStringWithTime(Self* c_this, QTime time);
	[LinkName("QLocale_ToStringWithDateTime")]
	public static extern libqt_string QLocale_ToStringWithDateTime(Self* c_this, QDateTime* dateTime);
	[LinkName("QLocale_ToString9")]
	public static extern libqt_string QLocale_ToString9(Self* c_this, QDate date, int64 format, QCalendar cal);
	[LinkName("QLocale_ToString10")]
	public static extern libqt_string QLocale_ToString10(Self* c_this, QDateTime* dateTime, int64 format, QCalendar cal);
	[LinkName("QLocale_DateFormat")]
	public static extern libqt_string QLocale_DateFormat(Self* c_this);
	[LinkName("QLocale_TimeFormat")]
	public static extern libqt_string QLocale_TimeFormat(Self* c_this);
	[LinkName("QLocale_DateTimeFormat")]
	public static extern libqt_string QLocale_DateTimeFormat(Self* c_this);
	[LinkName("QLocale_ToDate")]
	public static extern QDate QLocale_ToDate(Self* c_this, libqt_string stringVal);
	[LinkName("QLocale_ToTime")]
	public static extern QTime QLocale_ToTime(Self* c_this, libqt_string stringVal);
	[LinkName("QLocale_ToDateTime")]
	public static extern QDateTime QLocale_ToDateTime(Self* c_this, libqt_string stringVal);
	[LinkName("QLocale_ToDate2")]
	public static extern QDate QLocale_ToDate2(Self* c_this, libqt_string stringVal, libqt_string format);
	[LinkName("QLocale_ToTime2")]
	public static extern QTime QLocale_ToTime2(Self* c_this, libqt_string stringVal, libqt_string format);
	[LinkName("QLocale_ToDateTime2")]
	public static extern QDateTime QLocale_ToDateTime2(Self* c_this, libqt_string stringVal, libqt_string format);
	[LinkName("QLocale_ToDate3")]
	public static extern QDate QLocale_ToDate3(Self* c_this, libqt_string stringVal, int64 format, QCalendar cal);
	[LinkName("QLocale_ToDateTime3")]
	public static extern QDateTime QLocale_ToDateTime3(Self* c_this, libqt_string stringVal, int64 format, QCalendar cal);
	[LinkName("QLocale_ToDate4")]
	public static extern QDate QLocale_ToDate4(Self* c_this, libqt_string stringVal, libqt_string format, QCalendar cal);
	[LinkName("QLocale_ToDateTime4")]
	public static extern QDateTime QLocale_ToDateTime4(Self* c_this, libqt_string stringVal, libqt_string format, QCalendar cal);
	[LinkName("QLocale_DecimalPoint")]
	public static extern libqt_string QLocale_DecimalPoint(Self* c_this);
	[LinkName("QLocale_GroupSeparator")]
	public static extern libqt_string QLocale_GroupSeparator(Self* c_this);
	[LinkName("QLocale_Percent")]
	public static extern libqt_string QLocale_Percent(Self* c_this);
	[LinkName("QLocale_ZeroDigit")]
	public static extern libqt_string QLocale_ZeroDigit(Self* c_this);
	[LinkName("QLocale_NegativeSign")]
	public static extern libqt_string QLocale_NegativeSign(Self* c_this);
	[LinkName("QLocale_PositiveSign")]
	public static extern libqt_string QLocale_PositiveSign(Self* c_this);
	[LinkName("QLocale_Exponential")]
	public static extern libqt_string QLocale_Exponential(Self* c_this);
	[LinkName("QLocale_MonthName")]
	public static extern libqt_string QLocale_MonthName(Self* c_this, int32 param1);
	[LinkName("QLocale_StandaloneMonthName")]
	public static extern libqt_string QLocale_StandaloneMonthName(Self* c_this, int32 param1);
	[LinkName("QLocale_DayName")]
	public static extern libqt_string QLocale_DayName(Self* c_this, int32 param1);
	[LinkName("QLocale_StandaloneDayName")]
	public static extern libqt_string QLocale_StandaloneDayName(Self* c_this, int32 param1);
	[LinkName("QLocale_FirstDayOfWeek")]
	public static extern int64 QLocale_FirstDayOfWeek(Self* c_this);
	[LinkName("QLocale_Weekdays")]
	public static extern int64[] QLocale_Weekdays(Self* c_this);
	[LinkName("QLocale_AmText")]
	public static extern libqt_string QLocale_AmText(Self* c_this);
	[LinkName("QLocale_PmText")]
	public static extern libqt_string QLocale_PmText(Self* c_this);
	[LinkName("QLocale_MeasurementSystem")]
	public static extern int64 QLocale_MeasurementSystem(Self* c_this);
	[LinkName("QLocale_Collation")]
	public static extern QLocale QLocale_Collation(Self* c_this);
	[LinkName("QLocale_TextDirection")]
	public static extern int64 QLocale_TextDirection(Self* c_this);
	[LinkName("QLocale_ToUpper")]
	public static extern libqt_string QLocale_ToUpper(Self* c_this, libqt_string str);
	[LinkName("QLocale_ToLower")]
	public static extern libqt_string QLocale_ToLower(Self* c_this, libqt_string str);
	[LinkName("QLocale_CurrencySymbol")]
	public static extern libqt_string QLocale_CurrencySymbol(Self* c_this);
	[LinkName("QLocale_ToCurrencyString")]
	public static extern libqt_string QLocale_ToCurrencyString(Self* c_this, int64 param1);
	[LinkName("QLocale_ToCurrencyStringWithUnsignedlonglong")]
	public static extern libqt_string QLocale_ToCurrencyStringWithUnsignedlonglong(Self* c_this, uint64 param1);
	[LinkName("QLocale_ToCurrencyStringWithShort")]
	public static extern libqt_string QLocale_ToCurrencyStringWithShort(Self* c_this, int16 i);
	[LinkName("QLocale_ToCurrencyStringWithUshort")]
	public static extern libqt_string QLocale_ToCurrencyStringWithUshort(Self* c_this, uint16 i);
	[LinkName("QLocale_ToCurrencyStringWithInt")]
	public static extern libqt_string QLocale_ToCurrencyStringWithInt(Self* c_this, int32 i);
	[LinkName("QLocale_ToCurrencyStringWithUint")]
	public static extern libqt_string QLocale_ToCurrencyStringWithUint(Self* c_this, uint32 i);
	[LinkName("QLocale_ToCurrencyStringWithDouble")]
	public static extern libqt_string QLocale_ToCurrencyStringWithDouble(Self* c_this, double param1);
	[LinkName("QLocale_ToCurrencyStringWithFloat")]
	public static extern libqt_string QLocale_ToCurrencyStringWithFloat(Self* c_this, float i);
	[LinkName("QLocale_FormattedDataSize")]
	public static extern libqt_string QLocale_FormattedDataSize(Self* c_this, int64 bytes);
	[LinkName("QLocale_UiLanguages")]
	public static extern libqt_string[] QLocale_UiLanguages(Self* c_this);
	[LinkName("QLocale_LanguageToCode")]
	public static extern libqt_string QLocale_LanguageToCode(int64 language);
	[LinkName("QLocale_TerritoryToCode")]
	public static extern libqt_string QLocale_TerritoryToCode(int64 territory);
	[LinkName("QLocale_CountryToCode")]
	public static extern libqt_string QLocale_CountryToCode(int64 country);
	[LinkName("QLocale_ScriptToCode")]
	public static extern libqt_string QLocale_ScriptToCode(int64 script);
	[LinkName("QLocale_LanguageToString")]
	public static extern libqt_string QLocale_LanguageToString(int64 language);
	[LinkName("QLocale_TerritoryToString")]
	public static extern libqt_string QLocale_TerritoryToString(int64 territory);
	[LinkName("QLocale_CountryToString")]
	public static extern libqt_string QLocale_CountryToString(int64 country);
	[LinkName("QLocale_ScriptToString")]
	public static extern libqt_string QLocale_ScriptToString(int64 script);
	[LinkName("QLocale_SetDefault")]
	public static extern void QLocale_SetDefault(QLocale* locale);
	[LinkName("QLocale_C")]
	public static extern QLocale QLocale_C();
	[LinkName("QLocale_System")]
	public static extern QLocale QLocale_System();
	[LinkName("QLocale_MatchingLocales")]
	public static extern QLocale[] QLocale_MatchingLocales(int64 language, int64 script, int64 territory);
